--- a/horaire.html
+++ b/horaire.html
@@ -23,15 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Sam
-<br>
-27
-</td>
-<td class='red fnt-b'>13h30</td>
-<td class='ext red fnt-b'>Messe pour souligner le 50e anniversaire sacerdotal de Mgr Lemay (à la cathédrale d'Amos)</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 28
@@ -68,6 +59,15 @@ Ven
 </td>
 <td> </td>
 <td>Pas de messes</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+17
+</td>
+<td>16h00</td>
+<td>Célébration de la Parole</td>
 </tr>
 </table>
 </article>
