--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Accueil</div>
       </header>
-      <section><article class='mg-5'>
-<titre class='red'>50ᵉ anniversaire sacerdotal</titre>
-<p class='red fnt-b'>Prenez note qu'il y aura une messe, le 27 août, pour souligner le 50ᵉ anniversaire sacerdotal de Mgr Lemay à la cathédrale d’Amos à 13h30. Il n'y aura donc pas de célébration de la Parole en notre église cette journée-là.</p>
-</article>
+      <section><p class='fnt-b txt-just' style='padding: 1em 3em 0.5em'>Sise en la ville de Senneterre (Québec, Canada), l’église actuelle a été construite en 1960, selon les plans de l’architecte Jean-Charles Fortin, de St-Lambert (Comté de Chambly, Qc). Inaugurée le 25 décembre 1960, elle a été bénite le 25 juin 1961, par Mgr Albert Sanschagrin, o.m.i., Administrateur Apostolique.</p>
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 27 août 2022
+: le 28 août 2022
 </p>
 <p class='txt-cent'>
 <br>
