--- a/horaire.html
+++ b/horaire.html
@@ -25,33 +25,9 @@
 <td>
 Dim
 <br>
-28
-<br>
-|
-<br>
-Ven
-<br>
-2
-</td>
-<td> </td>
-<td>Pas de messes</td>
-</tr>
-<tr>
-<td>
-Sam
-<br>
-3
-</td>
-<td>16h00</td>
-<td>Messe célébrée par Mgr Lemay</td>
-</tr>
-<tr>
-<td>
-Dim
-<br>
 4
 <br>
-|
+au
 <br>
 Ven
 <br>
@@ -68,6 +44,30 @@ Sam
 </td>
 <td>16h00</td>
 <td>Célébration de la Parole</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+18
+<br>
+au
+<br>
+Mar
+<br>
+20
+</td>
+<td> </td>
+<td>Pas de messes</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+21
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
