--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 28 août 2022
+: le 4 septembre 2022
 </p>
 <p class='txt-cent'>
 <br>
@@ -31,7 +31,7 @@ Webmestre :
 </div>
 <article class='mg-a fit pad-1' style='margin-top: 1.5em'>
 <figure>
-<img class='smallphotoborder' src='clin-0286.jpg' title='Photo: C. Bélisle (2022)'>
+<img class='smallphotoborder' src='clin-0287.jpg' title='Photo: C. Bélisle (2022)'>
 <figcaption>Photo: C. Bélisle (2022)</figcaption>
 </figure>
 </article>
