--- a/horaire.html
+++ b/horaire.html
@@ -69,6 +69,15 @@ Mer
 <td>15h00</td>
 <td>Messe à Senneterre</td>
 </tr>
+<tr>
+<td>
+Jeu
+<br>
+22
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
 </table>
 </article>
 <p class='txt-cent' style='font-weight: normal; line-height: 175%'>
