--- a/horaire.html
+++ b/horaire.html
@@ -78,6 +78,33 @@ Jeu
 <td>15h30</td>
 <td class='ext'>Messe à Barraute</td>
 </tr>
+<tr>
+<td>
+Ven
+<br>
+23
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+24
+</td>
+<td>16h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+25
+</td>
+<td>10h30</td>
+<td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
 </table>
 </article>
 <p class='txt-cent' style='font-weight: normal; line-height: 175%'>
