--- a/horaire.html
+++ b/horaire.html
@@ -23,21 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-4
-<br>
-au
-<br>
-Ven
-<br>
-16
-</td>
-<td> </td>
-<td>Pas de messes</td>
-</tr>
-<tr>
-<td>
 Sam
 <br>
 17
@@ -104,6 +89,42 @@ Dim
 </td>
 <td>10h30</td>
 <td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+26
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+28
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+29
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+30
+</td>
+<td>16h00</td>
+<td class='ext'>Messe à La Morandière</td>
 </tr>
 </table>
 </article>
