--- a/annonces.html
+++ b/annonces.html
@@ -18,10 +18,21 @@
         <div>Annonces</div>
       </header>
       <section><div class='mg-a w50'>
-<button id='ibutton0' onclick='isection(0)'>L’Équipe de la Joie (recrutement)</button>
+<button id='ibutton0' onclick='isection(0)'>Bénédiction des cimetières (24 sept.)</button>
+<button id='ibutton4' onclick='isection(4)'>L’Équipe de la Joie (recrutement)</button>
 <button id='ibutton3' onclick='isection(3)'>Poste vacant au sein du conseil de Fabrique</button>
 <button id='ibutton2' onclick='isection(2)'>Bancs d'église à vendre</button>
 <button id='ibutton1' onclick='isection(1)'>Recrutement chorale St-Paul</button>
+</div>
+<div id='section0'>
+<article class='mt-2'>
+<titre>Bénédiction des cimetières</titre>
+<p><strong>Samedi, le 24 septembre</strong></p>
+
+<p><strong>13h00</strong> – Ste-Cécile de Belcourt<br />
+<strong>13h30</strong> – St-Louis de Senneterre<br />
+<strong>14h00</strong> – St-Paul de Senneterre</p>
+</article>
 </div>
 <div id='section3'>
 <article class='mt-2'>
@@ -63,7 +74,7 @@ Faites vite, produit en demande !
 <p>Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).</p>
 </article>
 </div>
-<div id='section0'>
+<div id='section4'>
 <article class='mt-2'>
 <titre>L’Équipe de la Joie (recrutement)</titre>
 <p>Notre mission est d’apporter de la joie aux personnes de notre entourage, surtout celles qui sont seules ou malades. Nous avons besoin de bénévoles pour remplir ce mandat.</p>
