--- a/feuillets.html
+++ b/feuillets.html
@@ -23,6 +23,16 @@
 <table cellpadding='0' cellspacing='5' class='fit' summary='Feuillets paroissiaux'>
 <tbody>
 <tr>
+<td class='fnt-b txt-right'>3 octobre 2022</td>
+<td>
+<button onclick='location.href=&#39;20221003.html&#39;'>HTML</button>
+</td>
+<td style='width: 0.3em'></td>
+<td>
+<button onclick='location.href=&#39;20221003.pdf&#39;'>PDF</button>
+</td>
+</tr>
+<tr>
 <td class='fnt-b txt-right red'>Septembre 2022</td>
 <td>
 <button onclick='location.href=&#39;20220829.html&#39;'>HTML</button>
@@ -50,16 +60,6 @@
 <td style='width: 0.3em'></td>
 <td>
 <button onclick='location.href=&#39;20220704.pdf&#39;'>PDF</button>
-</td>
-</tr>
-<tr>
-<td class='fnt-b txt-right'>20 juin 2022</td>
-<td>
-<button onclick='location.href=&#39;20220620.html&#39;'>HTML</button>
-</td>
-<td style='width: 0.3em'></td>
-<td>
-<button onclick='location.href=&#39;20220620.pdf&#39;'>PDF</button>
 </td>
 </tr>
 </tbody>
