--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ Webmestre :
 <button class='mg-a fit' onclick='mailto:csbelisle@yahoo.ca'>Christian Bélisle</button>
 </p>
 </div>
+<article class='mg-5'>
+<titre class='red'>Bénédiction des cimetières</titre>
+<p class='red fnt-b'>N'oubliez pas la bénédiction des cimetières ce 24 septembre : à 13 h 00 pour le cimetière Ste-Cécile de Belcourt, à 13 h 30 pour le cimetière St-Louis de Senneterre et, finalement, à 14 h 00 pour le cimetière St-Paul de Senneterre.</p>
+</article>
 <article class='mg-a fit pad-1' style='margin-top: 1.5em'>
 <figure>
 <img class='smallphotoborder' src='clin-0288.jpg' title='Photo: C. Bélisle (2018)'>
