--- a/20221003.html
+++ b/20221003.html
@@ -79,7 +79,7 @@ Mme <strong>Reine Bergeron</strong> (82 ans)</p>
 M. <strong>Marcel Julien</strong> (91 ans)<br />
 Mme <strong>Cécile Martel</strong> (69 ans)<br />
 M. <strong>Toussaint Rousseau</strong> (84 ans)<br />
-Mme <strong>ernice Gervais</strong> (55 ans)</p>
+Mme <strong>Bernice Gervais</strong> (55 ans)</p>
 </article>
 <article>
 <h2>L’Équipe de la Joie</h2>
