--- a/horaire.html
+++ b/horaire.html
@@ -23,15 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Sam
-<br>
-17
-</td>
-<td>16h00</td>
-<td>Célébration de la Parole</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 18
@@ -64,13 +55,13 @@ Jeu
 <td class='ext'>Messe à Barraute</td>
 </tr>
 <tr>
-<td>
+<td class='red'>
 Ven
 <br>
 23
 </td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
+<td> </td>
+<td class='red'>Pas de messe aujourd'hui</td>
 </tr>
 <tr>
 <td>
@@ -125,6 +116,15 @@ Ven
 </td>
 <td>16h00</td>
 <td class='ext'>Messe à La Morandière</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+1
+</td>
+<td>16h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
