--- a/horaire.html
+++ b/horaire.html
@@ -22,39 +22,6 @@
 <br>
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
-<td>
-Dim
-<br>
-18
-<br>
-au
-<br>
-Mar
-<br>
-20
-</td>
-<td> </td>
-<td>Pas de messes</td>
-</tr>
-<tr>
-<td>
-Mer
-<br>
-21
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Jeu
-<br>
-22
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
-<tr>
 <td class='red'>
 Ven
 <br>
@@ -125,6 +92,41 @@ Sam
 </td>
 <td>16h00</td>
 <td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+2
+</td>
+<td>
+9h30
+<br>
+11h00
+</td>
+<td class='ext'>
+Messe à La Morandière
+<br>
+Messe à Barraute
+</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+3
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+5
+</td>
+<td class='modif'>14h00</td>
+<td>Messe à la résidence l’Îlot d’Or</td>
 </tr>
 </table>
 </article>
