--- a/horaire.html
+++ b/horaire.html
@@ -22,15 +22,6 @@
 <br>
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
-<td class='red'>
-Ven
-<br>
-23
-</td>
-<td> </td>
-<td class='red'>Pas de messe aujourd'hui</td>
-</tr>
-<tr>
 <td>
 Sam
 <br>
@@ -127,6 +118,24 @@ Mer
 </td>
 <td class='modif'>14h00</td>
 <td>Messe à la résidence l’Îlot d’Or</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+6
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+7
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
