--- a/annonces.html
+++ b/annonces.html
@@ -18,10 +18,20 @@
         <div>Annonces</div>
       </header>
       <section><div class='mg-a w50'>
-<button id='ibutton0' onclick='isection(0)'>Bancs d'église à vendre</button>
+<button id='ibutton0' onclick='isection(0)'>Tirage au profit de la Fabrique</button>
+<button id='ibutton2' onclick='isection(2)'>Bancs d'église à vendre</button>
 <button id='ibutton4' onclick='isection(4)'>L’Équipe de la Joie (recrutement)</button>
 <button id='ibutton3' onclick='isection(3)'>Poste vacant au sein du conseil de Fabrique</button>
 <button id='ibutton1' onclick='isection(1)'>Recrutement chorale St-Paul</button>
+</div>
+<div id='section0'>
+<article class='mt-2 mg-3'>
+<titre>Tirage au profit de la Fabrique</titre>
+<p class='txt-cent'>
+<img class='smallphotoborder' src='img-annonces-029.jpg'>
+</p>
+<p>Un tableau de l'artiste peintre Jeannot Hamel, de La Sarre, sera tiré pour Noël. Les billets sont en vente au coût de $ 5. Les profits de cette vente iront à la Fabrique Saint-Paul de Senneterre.</p>
+</article>
 </div>
 <div id='section3'>
 <article class='mt-2'>
@@ -33,7 +43,7 @@ d’un président au conseil de Fabrique.
 </p>
 </article>
 </div>
-<div id='section0'>
+<div id='section2'>
 <article class='mt-2'>
 <titre>Bancs d'église à vendre</titre>
 <p class='txt-cent'>
