--- a/horaire.html
+++ b/horaire.html
@@ -17,19 +17,10 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Horaire liturgique</div>
       </header>
-      <section><article class='mg-a' style='width: 70%; margin-block: 2em'>
+      <section><article class='mg-a w70 mb-2'>
 <titre>Célébrations à venir</titre>
 <br>
 <table cellspacing='0' id='horaire' summary='tableau'>
-<tr>
-<td>
-Jeu
-<br>
-29
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
 <tr>
 <td>
 Ven
@@ -136,6 +127,15 @@ Mer
 </td>
 <td>15h00</td>
 <td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+13
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
 </tr>
 </table>
 </article>
