--- a/annonces.html
+++ b/annonces.html
@@ -34,7 +34,7 @@
 </article>
 </div>
 <div id='section3'>
-<article class='mt-2'>
+<article class='mt-2 mg-3'>
 <titre>Poste vacant au sein du conseil de Fabrique</titre>
 <p>
 Nous avons un besoin
@@ -68,13 +68,13 @@ Faites vite, produit en demande !
 </article>
 </div>
 <div id='section1'>
-<article class='mt-2'>
+<article class='mt-2 mg-3'>
 <titre>Recrutement chorale St-Paul</titre>
 <p>Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).</p>
 </article>
 </div>
 <div id='section4'>
-<article class='mt-2'>
+<article class='mt-2 mg-3'>
 <titre>L’Équipe de la Joie (recrutement)</titre>
 <p>Notre mission est d’apporter de la joie aux personnes de notre entourage, surtout celles qui sont seules ou malades. Nous avons besoin de bénévoles pour remplir ce mandat.</p>
 <p>Comment ? En soulignant les fêtes (Noël, Pâques, anniversaires), visites, téléphones et toutes initiatives pour contrer l’isolement de nos aînés.</p>
