--- a/horaire.html
+++ b/horaire.html
@@ -23,50 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Ven
-<br>
-14
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Sam
-<br>
-15
-</td>
-<td>16h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Dim
-<br>
-16
-</td>
-<td>
-9h30
-<br>
-11h00
-</td>
-<td class='ext'>
-Messe à La Morandière
-<br>
-Messe à Barraute
-</td>
-</tr>
-<tr>
-<td>
-Lun
-<br>
-17
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Mer
 <br>
 19
@@ -136,6 +92,50 @@ Jeu
 </td>
 <td>15h30</td>
 <td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+28
+</td>
+<td>16h00</td>
+<td class='ext'>Messe à La Morandière</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+29
+</td>
+<td>16h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+30
+</td>
+<td>
+9h30
+<br>
+11h00
+</td>
+<td class='ext'>
+Messe à La Morandière
+<br>
+Messe à Barraute
+</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+31
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
