--- a/horaire.html
+++ b/horaire.html
@@ -23,42 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Mer
-<br>
-19
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Jeu
-<br>
-20
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
-<tr>
-<td>
-Ven
-<br>
-21
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Sam
-<br>
-22
-</td>
-<td>16h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 23
@@ -72,8 +36,8 @@ Lun
 <br>
 24
 </td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
+<td> </td>
+<td class='red'>Pas de messe aujourd'hui</td>
 </tr>
 <tr>
 <td>
@@ -81,8 +45,8 @@ Mer
 <br>
 26
 </td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
+<td> </td>
+<td class='red'>Pas de messe aujourd'hui</td>
 </tr>
 <tr>
 <td>
@@ -127,15 +91,6 @@ Messe à La Morandière
 <br>
 Messe à Barraute
 </td>
-</tr>
-<tr>
-<td>
-Lun
-<br>
-31
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
