--- a/horaire.html
+++ b/horaire.html
@@ -23,24 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-23
-</td>
-<td>10h30</td>
-<td class='ext'>Messe à Lebel-sur-Quévillon</td>
-</tr>
-<tr>
-<td>
-Lun
-<br>
-24
-</td>
-<td> </td>
-<td class='red'>Pas de messe aujourd'hui</td>
-</tr>
-<tr>
-<td>
 Mer
 <br>
 26
@@ -91,6 +73,69 @@ Messe à La Morandière
 <br>
 Messe à Barraute
 </td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+31
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+2
+</td>
+<td>16h00</td>
+<td>Messe à la résidence l'Îlot d'Or</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+3
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+4
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+5
+</td>
+<td>16h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+6
+</td>
+<td>10h30</td>
+<td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+7
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
