--- a/horaire.html
+++ b/horaire.html
@@ -23,15 +23,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Mer
-<br>
-26
-</td>
-<td> </td>
-<td class='red'>Pas de messe aujourd'hui</td>
-</tr>
-<tr>
-<td>
 Jeu
 <br>
 27
@@ -133,6 +124,15 @@ Dim
 Lun
 <br>
 7
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+9
 </td>
 <td>15h00</td>
 <td>Messe à Senneterre</td>
