--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ Webmestre :
 <button class='mg-a fit' onclick='mailto:csbelisle@yahoo.ca'>Christian Bélisle</button>
 </p>
 </div>
+<article class='mg-2 w50 mg-a'>
+<p class='red fnt-b'>
+<img class='float-left' src='20221031-heure.png' style='margin-left: 1px; padding-right: 6px'>
+Retour à l’heure normale dimanche le
+<b>6 novembre</b>
+</p>
+</article>
 <article class='mg-a fit pad-1' style='margin-top: 1.5em'>
 <figure>
 <img class='smallphotoborder' src='clin-0291.jpg' title='Photo: C. Bélisle (2022)'>
