--- a/horaire.html
+++ b/horaire.html
@@ -21,33 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Mer
-<br>
-9
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Jeu
-<br>
-10
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
-<tr>
-<td>
-Ven
-<br>
-11
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Sam
 <br>
 12
@@ -134,6 +107,33 @@ Lun
 </td>
 <td>15h00</td>
 <td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+23
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+24
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+25
+</td>
+<td>15h00</td>
+<td class='ext'>Messe à La Morandière</td>
 </tr>
 </table>
 </article>
