--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 14 novembre 2022
+: le 16 novembre 2022
 </p>
 <p class='txt-cent'>
 <br>
@@ -29,8 +29,7 @@ Webmestre :
 </div>
 <article class='mg-a fit pad-1' style='margin-top: 1.5em'>
 <figure>
-<img class='smallphotoborder' src='clin-0293.jpg' title='Photo: C. Bélisle (2022)'>
-<figcaption>Photo: C. Bélisle (2022)</figcaption>
+<img class='smallphotoborder' src='MercrediRouge_2022.jpg'>
 </figure>
 </article>
 </section>
