--- a/horaire.html
+++ b/horaire.html
@@ -21,24 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-20
-</td>
-<td>10h30</td>
-<td class='ext'>Messe à Lebel-sur-Quévillon</td>
-</tr>
-<tr>
-<td>
-Lun
-<br>
-21
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Mer
 <br>
 23
@@ -89,6 +71,73 @@ Messe à La Morandière
 <br>
 Messe à Barraute
 </td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+28
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+30
+</td>
+<td> </td>
+<td class='note'>
+Pas de messe aujourd’hui
+<br>
+<i>(M. le curé absent)</i>
+</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+1
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+2
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+3
+</td>
+<td>16h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+4
+</td>
+<td>10h30</td>
+<td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+5
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
