--- a/20221128.html
+++ b/20221128.html
@@ -51,7 +51,7 @@ noel-chandeleur/lavent-se-preparer-a-noel/
 
 
 </article>
-<article>
+<article class='mt-1'>
 <h2>L’Équipe de la Joie</h2>
 <p>Notre mission est d’apporter de la joie aux personnes de notre entourage, surtout celles qui sont seules ou malades. Nous avons besoin de bénévoles pour remplir ce mandat.</p>
 
@@ -61,13 +61,13 @@ noel-chandeleur/lavent-se-preparer-a-noel/
 
 
 </article>
-<article class='mg-2'>
+<article class='mg-2 mt-1'>
 <h2>Chorale St-Paul</h2>
 <p>
 Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).
 </p>
 </article>
-<article>
+<article class='mt-1'>
 <h2>Capitation 2022</h2>
 <p>Afin de garder <strong><em>notre Église</em></strong> bien vivante, votre don est une façon de la conserver au niveau financier pour s’assurer un lieu de culte <strong><em>accueillant et sécuritaire</em></strong>.</p>
 
