--- a/20221128.html
+++ b/20221128.html
@@ -43,6 +43,7 @@ noel-chandeleur/lavent-se-preparer-a-noel/
 <h2>Élections de marguilliers/marguillières</h2>
 <p>Nous avons quatre postes de marguilliers/marguillières à combler pour janvier prochain. En conséquences des élections auront lieu au cours de ce mois.</p>
 <p>Les marguilliers et marguillières sortants sont M. Jean-Marc Savard, Mme Suzanne Carreau (rééligible), Mme Julie Cyr et M. Marcel Ayotte (rééligible).</p>
+<p class='gras'>Ces élections auront lieu le 17 décembre prochain, après la messe.</p>
 <p class='italique'>Et nous vous rappelons que nous sommes toujours à la recherche d’un ou une président(e) d’assemblée (voir ci-dessous).</p>
 </article>
 <article class='mt-1'>
