--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 23 novembre 2022
+: le 27 novembre 2022
 </p>
 <p class='txt-cent'>
 <br>
@@ -27,9 +27,15 @@ Webmestre :
 <button class='mg-a fit' onclick='mailto:csbelisle@yahoo.ca'>Christian Bélisle</button>
 </p>
 </div>
+<article class='avertissement mg-3'>
+<titre>Élections (17 décembre)</titre>
+<p>Nous avons quatre postes de marguilliers/marguillières à combler pour janvier prochain. Les marguilliers et marguillières sortants sont M. Jean-Marc Savard, Mme Suzanne Carreau (rééligible), Mme Julie Cyr et M. Marcel Ayotte (rééligible).</p>
+<p>Ces élections auront lieu le 17 décembre prochain, après la messe.</p>
+<p class='fnt-i fs-08 fnt-b'>Et nous vous rappelons que nous sommes toujours à la recherche d’un ou une président(e) d’assemblée.</p>
+</article>
 <article class='mg-a fit pad-1' style='margin-top: 1.5em'>
 <figure>
-<img class='smallphotoborder' src='clin-0294.jpg' title='Photo: C. Bélisle (2022)'>
+<img class='smallphotoborder' src='clin-0295.jpg' title='Photo: C. Bélisle (2022)'>
 <figcaption>Photo: C. Bélisle (2022)</figcaption>
 </figure>
 </article>
