--- a/horaire.html
+++ b/horaire.html
@@ -21,42 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Mer
-<br>
-23
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Jeu
-<br>
-24
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
-<tr>
-<td>
-Ven
-<br>
-25
-</td>
-<td>16h00</td>
-<td class='ext'>Messe à La Morandière</td>
-</tr>
-<tr>
-<td>
-Sam
-<br>
-26
-</td>
-<td>16h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 27
@@ -137,6 +101,42 @@ Lun
 5
 </td>
 <td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+7
+</td>
+<td class='modif'>14h00</td>
+<td>Messe à la résidence l’Îlot d’Or</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+8
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+9
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+10
+</td>
+<td>16h00</td>
 <td>Messe à Senneterre</td>
 </tr>
 </table>
