--- a/20221128.html
+++ b/20221128.html
@@ -40,20 +40,20 @@ noel-chandeleur/lavent-se-preparer-a-noel/
 </div>
 <div id='page2'>
 <article>
-<h2>Élections de marguilliers/marguillières</h2>
+<titre>Élections de marguilliers/marguillières</titre>
 <p>Nous avons quatre postes de marguilliers/marguillières à combler pour janvier prochain. En conséquences des élections auront lieu au cours de ce mois.</p>
 <p>Les marguilliers et marguillières sortants sont M. Jean-Marc Savard, Mme Suzanne Carreau (rééligible), Mme Julie Cyr et M. Marcel Ayotte (rééligible).</p>
 <p class='gras'>Ces élections auront lieu le 17 décembre prochain, après la messe.</p>
 <p class='italique'>Et nous vous rappelons que nous sommes toujours à la recherche d’un ou une président(e) d’assemblée (voir ci-dessous).</p>
 </article>
 <article class='mt-1'>
-<h2>Conseil de Fabrique (urgent)</h2>
+<titre>Conseil de Fabrique (urgent)</titre>
 <p>Le Conseil de la Fabrique St-Paul de Senneterre a présentement un <strong>urgent</strong> besoin d’un(e) <strong>président(e) d’assemblée</strong>. Si vous connaissez des personnes qui pourraient être intéressées ou êtes intéressés vous-même, contactez le bureau du secrétariat (819-737-2045) ou un des marguilliers.</p>
 
 
 </article>
 <article class='mt-1'>
-<h2>L’Équipe de la Joie</h2>
+<titre>L’Équipe de la Joie</titre>
 <p>Notre mission est d’apporter de la joie aux personnes de notre entourage, surtout celles qui sont seules ou malades. Nous avons besoin de bénévoles pour remplir ce mandat.</p>
 
 <p>Comment ? En soulignant les fêtes (Noël, Pâques, anniversaires), visites, téléphones et toutes initiatives pour contrer l’isolement de nos aînés.</p>
@@ -63,13 +63,11 @@ noel-chandeleur/lavent-se-preparer-a-noel/
 
 </article>
 <article class='mg-2 mt-1'>
-<h2>Chorale St-Paul</h2>
-<p>
-Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).
-</p>
+<titre>Chorale St-Paul</titre>
+<p>Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).</p>
 </article>
 <article class='mt-1'>
-<h2>Capitation 2022</h2>
+<titre>Capitation 2022</titre>
 <p>Afin de garder <strong><em>notre Église</em></strong> bien vivante, votre don est une façon de la conserver au niveau financier pour s’assurer un lieu de culte <strong><em>accueillant et sécuritaire</em></strong>.</p>
 
 <p>Merci de votre collaboration pour la survie de notre Patrimoine.</p>
