--- a/equipejoie.html
+++ b/equipejoie.html
@@ -99,8 +99,8 @@ est d’<span style='color: #990000'>allumer une lumière</span> dans la vie des
 </table>
 </article>
 </section>
-      <div class="openButton">&gt;&gt;</div>
-      <div class="topButton">&gt;|</div>
+      <div class="openButton"><span class="material-icons">double_arrow</span></div>
+      <div class="topButton"><span class="material-icons">skip_previous</span></div>
       <my-navigation></my-navigation>
       <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.12. <br />&copy; 2022 Christian Bélisle 🇨🇦️</p>
     </main>
