--- a/horaire.html
+++ b/horaire.html
@@ -21,23 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-27
-</td>
-<td>
-9h30
-<br>
-11h00
-</td>
-<td class='ext'>
-Messe à La Morandière
-<br>
-Messe à Barraute
-</td>
-</tr>
-<tr>
-<td>
 Lun
 <br>
 28
@@ -139,6 +122,23 @@ Sam
 <td>16h00</td>
 <td>Messe à Senneterre</td>
 </tr>
+<tr>
+<td>
+Dim
+<br>
+11
+</td>
+<td>
+9h30
+<br>
+11h00
+</td>
+<td class='ext'>
+Messe à La Morandière
+<br>
+Messe à Barraute
+</td>
+</tr>
 </table>
 </article>
 <p class='txt-cent' style='font-weight: normal; line-height: 175%'>
@@ -147,8 +147,8 @@ Pour plus de détails
 <button class='mg-a fit' onclick='location.href=&#39;feuillets.html&#39;' title='Aller à la page des Feuillets paroissiaux'>feuillets paroissiaux</button>
 </p>
 </section>
-      <div class="openButton">&gt;&gt;</div>
-      <div class="topButton">&gt;|</div>
+      <div class="openButton"><span class="material-icons">double_arrow</span></div>
+      <div class="topButton"><span class="material-icons">skip_previous</span></div>
       <my-navigation></my-navigation>
       <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.12. <br />&copy; 2022 Christian Bélisle 🇨🇦️</p>
     </main>
