--- a/annonces.html
+++ b/annonces.html
@@ -83,8 +83,8 @@ Faites vite, produit en demande !
 </article>
 </div>
 </section>
-      <div class="openButton">&gt;&gt;</div>
-      <div class="topButton">&gt;|</div>
+      <div class="openButton"><span class="material-icons">double_arrow</span></div>
+      <div class="topButton"><span class="material-icons">skip_previous</span></div>
       <my-navigation></my-navigation>
       <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.12. <br />&copy; 2022 Christian Bélisle 🇨🇦️</p>
     </main>
