--- a/feuillets.html
+++ b/feuillets.html
@@ -21,6 +21,16 @@
 <table cellpadding='0' cellspacing='5' class='fit' summary='Feuillets paroissiaux'>
 <tbody>
 <tr>
+<td class='fnt-b txt-right'>12 décembre 2022</td>
+<td>
+<button onclick='location.href=&#39;20221212.html&#39;'>HTML</button>
+</td>
+<td style='width: 0.3em'></td>
+<td>
+<button onclick='location.href=&#39;20221212.pdf&#39;'>PDF</button>
+</td>
+</tr>
+<tr>
 <td class='fnt-b txt-right'>28 novembre 2022</td>
 <td>
 <button onclick='location.href=&#39;20221128.html&#39;'>HTML</button>
@@ -48,16 +58,6 @@
 <td style='width: 0.3em'></td>
 <td>
 <button onclick='location.href=&#39;20221031.pdf&#39;'>PDF</button>
-</td>
-</tr>
-<tr>
-<td class='fnt-b txt-right'>17 octobre 2022</td>
-<td>
-<button onclick='location.href=&#39;20221017.html&#39;'>HTML</button>
-</td>
-<td style='width: 0.3em'></td>
-<td>
-<button onclick='location.href=&#39;20221017.pdf&#39;'>PDF</button>
 </td>
 </tr>
 </tbody>
