--- a/horaire.html
+++ b/horaire.html
@@ -21,42 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Ven
-<br>
-2
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Sam
-<br>
-3
-</td>
-<td>16h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Dim
-<br>
-4
-</td>
-<td>10h30</td>
-<td class='ext'>Messe à Lebel-sur-Quévillon</td>
-</tr>
-<tr>
-<td>
-Lun
-<br>
-5
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Mer
 <br>
 7
@@ -107,6 +71,69 @@ Messe à La Morandière
 <br>
 Messe à Barraute
 </td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+12
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+14
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+15
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+16
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+17
+</td>
+<td>16h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+18
+</td>
+<td>10h30</td>
+<td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+19
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
