--- a/20221031.html
+++ b/20221031.html
@@ -184,10 +184,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Matthieu, Hélène, André et Oliva –
+Matthieu, Hélène, André et Oliva
 <span class='itpar'>Émilienne</span>
 <br>
-Louis-Marie et Hélène Martin –
+Louis-Marie et Hélène Martin
 <span class='itpar'>Françoise Martin</span>
 </td>
 </tr>
@@ -235,7 +235,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Georges-Edward Tremblay –
+Georges-Edward Tremblay
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -280,7 +280,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Jacques Richard  –
+Jacques Richard
 <span class='itpar'>Collecte au service</span>
 <span class='addendum-sq'>À la résidence l’Îlot d’Or</span>
 </td>
@@ -323,7 +323,7 @@ Ven
 <span class='gras'>Messe :</span>
 </td>
 <td>
-À nos intentions –
+À nos intentions
 <span class='itpar'>M. et Mme Martial Duchemin</span>
 </td>
 </tr>
@@ -350,13 +350,13 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Membres défunts des Filles d’Isabelle –
+Membres défunts des Filles d’Isabelle
 <span class='itpar'>Les Filles d’Isabelle</span>
 <br>
-Père Gaston Letendre et Jean-Paul Blouin –
+Père Gaston Letendre et Jean-Paul Blouin
 <span class='itpar'>Émilienne</span>
 <br>
-Jean-Marie Cloutier –
+Jean-Marie Cloutier
 <span class='itpar'>Alice et Émilienne</span>
 </td>
 </tr>
@@ -412,7 +412,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Honneur à la Sainte Anne –
+Honneur à la Sainte Anne
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -459,7 +459,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Denis Roussil –
+Denis Roussil
 <span class='itpar'>Collecte au service</span>
 </td>
 </tr>
@@ -515,7 +515,7 @@ Ven
 <span class='gras'>Messe  :</span>
 </td>
 <td>
-Bertrand Gilbert –
+Bertrand Gilbert
 <span class='itpar'>Gisèle Gilbert</span>
 </td>
 </tr>
@@ -542,10 +542,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Parents défunts familles Michaud et Prévost –
+Parents défunts familles Michaud et Prévost
 <span class='itpar'>Alice et les enfants</span>
 <br>
-Esthelle Lemelin –
+Esthelle Lemelin
 <span class='itpar'>Denise Dumont Grosleau</span>
 </td>
 </tr>
