--- a/20221114.html
+++ b/20221114.html
@@ -491,10 +491,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Parents défunts familles Michaud et Prévost –
+Parents défunts familles Michaud et Prévost
 <span class='itpar'>Alice et les enfants</span>
 <br>
-Estelle Lemelin –
+Estelle Lemelin
 <span class='itpar'>Denise Dumont Grosleau</span>
 </td>
 </tr>
@@ -542,7 +542,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Armand Brousseau –
+Armand Brousseau
 <span class='itpar'>Annette Brousseau</span>
 </td>
 </tr>
@@ -587,7 +587,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Élisabeth Bélanger –
+Élisabeth Bélanger
 <span class='itpar'>Une paroissienne</span>
 </td>
 </tr>
@@ -629,7 +629,7 @@ Ven
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Gisèle Tremblay –
+Gisèle Tremblay
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -658,10 +658,9 @@ Sam
 <td>
 Vicky Bilodeau
 <span class='addendum-1'>messe anniversaire</span>
- –
 <span class='itpar'>Réjean Bilodeau</span>
 <br>
-Roland, Mario et Estelle Lemelin –
+Roland, Mario et Estelle Lemelin
 <span class='itpar'>Carole et Sonia</span>
 </td>
 </tr>
@@ -703,7 +702,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Hommage à la Vierge Marie –
+Hommage à la Vierge Marie
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -750,7 +749,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Mérisa LeBouthillier –
+Mérisa LeBouthillier
 <span class='itpar'>Sa sœur</span>
 </td>
 </tr>
@@ -807,10 +806,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Rita Marcotte –
+Rita Marcotte
 <span class='itpar'>Ses enfants</span>
 <br>
-Marcel et Marie-Paule Julien –
+Marcel et Marie-Paule Julien
 <span class='itpar'>La famille</span>
 </td>
 </tr>
