--- a/20221128.html
+++ b/20221128.html
@@ -154,10 +154,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Rita Marcotte –
+Rita Marcotte
 <span class='itpar'>Ses enfants</span>
 <br>
-Marcel et Marie-Paule Julien –
+Marcel et Marie-Paule Julien
 <span class='itpar'>La famille</span>
 </td>
 </tr>
@@ -205,7 +205,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Charles-Eugène Fillion –
+Charles-Eugène Fillion
 <span class='itpar'>Annette Brousseau</span>
 </td>
 </tr>
@@ -309,10 +309,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Estelle Lemelin –
+Estelle Lemelin
 <span class='itpar'>Andrée D’Astous</span>
 <br>
-Isabelle Blain –
+Isabelle Blain
 <span class='itpar'>Sa mère</span>
 </td>
 </tr>
@@ -354,7 +354,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Paul Gagnon –
+Paul Gagnon
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -401,7 +401,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Louisette, Philippe Proulx et Mimi Mainville –
+Louisette, Philippe Proulx et Mimi Mainville
 <span class='itpar'>Pierrette et Billy Chapman</span>
 <span class='addendum-sq'>À la résidence l’Îlot d’Or</span>
 </td>
@@ -444,7 +444,7 @@ Ven
 <span class='gras'>Messe  :</span>
 </td>
 <td>
-Bertrand Gilbert –
+Bertrand Gilbert
 <span class='itpar'>Gisèle Gilbert</span>
 </td>
 </tr>
@@ -471,10 +471,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Yvon, Cora, Jacques et Jean –
+Yvon, Cora, Jacques et Jean
 <span class='itpar'>Pierre Brodeur</span>
 <br>
-Michel Gagnon –
+Michel Gagnon
 <span class='itpar'>Gertrude Gagnon</span>
 </td>
 </tr>
