--- a/20221212.html
+++ b/20221212.html
@@ -118,10 +118,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Yvon, Cora, Jacques et Jean –
+Yvon, Cora, Jacques et Jean
 <span class='itpar'>Pierre Brodeur</span>
 <br>
-Michel Gagnon –
+Michel Gagnon
 <span class='itpar'>Gertrude Gagnon</span>
 </td>
 </tr>
@@ -169,7 +169,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Yvette Mercier Desrochers –
+Yvette Mercier Desrochers
 <span class='itpar'>Gertrude Bilodeau</span>
 </td>
 </tr>
@@ -214,7 +214,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Régine Slater –
+Régine Slater
 <span class='itpar'>Sa famille</span>
 </td>
 </tr>
@@ -256,7 +256,7 @@ Ven
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Honneur à la Sainte Anne –
+Honneur à la Sainte Anne
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -283,10 +283,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Hélène Sigouin et Mathieu Blouin –
+Hélène Sigouin et Mathieu Blouin
 <span class='itpar'>Alice Sigouin</span>
 <br>
-Parents défunts famille Thomas Gélinas –
+Parents défunts famille Thomas Gélinas
 <span class='itpar'>Famille Leroux</span>
 </td>
 </tr>
@@ -337,7 +337,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Georges-Édouard Tremblay –
+Georges-Édouard Tremblay
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -384,7 +384,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Denis Roussil –
+Denis Roussil
 <span class='itpar'>Collecte au service</span>
 </td>
 </tr>
@@ -426,7 +426,7 @@ Ven
 <span class='gras'>Messe  :</span>
 </td>
 <td>
-Bertrand Gilbert –
+Bertrand Gilbert
 <span class='itpar'>Gisèle Gilbert</span>
 </td>
 </tr>
@@ -465,16 +465,16 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Parents défunts famille Roussil –
+Parents défunts famille Roussil
 <span class='itpar'>Sylvie et Nicole Roussil</span>
 <br>
-Parents défunts familles Blouin et Leroux –
+Parents défunts familles Blouin et Leroux
 <span class='itpar'>Émilienne</span>
 <br>
-Gérard Lafontaine –
+Gérard Lafontaine
 <span class='itpar'>Gisèle Lafontaine</span>
 <br>
-Albert LeBouthillier –
+Albert LeBouthillier
 <span class='itpar'>Sa fille</span>
 </td>
 </tr>
@@ -543,10 +543,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Parents défunts familles Carrier et Blain –
+Parents défunts familles Carrier et Blain
 <span class='itpar'>Michelle Blain</span>
 <br>
-Parents défunts famille Roussil –
+Parents défunts famille Roussil
 <span class='itpar'>Sylvie et Nicole Roussil</span>
 </td>
 </tr>
@@ -600,7 +600,7 @@ Lun
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Armand Brousseau –
+Armand Brousseau
 <span class='itpar'>Collecte au service</span>
 </td>
 </tr>
@@ -647,7 +647,7 @@ Mer
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Jacques Richard –
+Jacques Richard
 <span class='itpar'>Collecte au service</span>
 </td>
 </tr>
@@ -689,7 +689,7 @@ Ven
 <span class='gras'>Messe  :</span>
 </td>
 <td>
-Paul Gagnon –
+Paul Gagnon
 <span class='itpar'>Denise Gagnon</span>
 </td>
 </tr>
@@ -716,10 +716,10 @@ Sam
 <span class='gras'>Messe :</span>
 </td>
 <td>
-Yvon et Régine Lavoie –
+Yvon et Régine Lavoie
 <span class='itpar'>Hélène et les enfants</span>
 <br>
-Réjean Allaire –
+Réjean Allaire
 <span class='itpar'>Collecte au service</span>
 </td>
 </tr>
