--- a/horaire.html
+++ b/horaire.html
@@ -21,41 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Ven
-<br>
-9
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Sam
-<br>
-10
-</td>
-<td>16h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Dim
-<br>
-11
-</td>
-<td>
-9h30
-<br>
-11h00
-</td>
-<td class='ext'>
-Messe à La Morandière
-<br>
-Messe à Barraute
-</td>
-</tr>
-<tr>
-<td>
 Lun
 <br>
 12
@@ -134,6 +99,56 @@ Jeu
 </td>
 <td>15h30</td>
 <td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+23
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+24
+</td>
+<td>
+ 
+<br>
+16h00
+<br>
+20h00
+</td>
+<td>
+<strong>
+Veille de Noël
+</strong>
+<br>
+<span class='ext'>Messe à Lebel-sur-Quévillon</span>
+<br>
+Messe à Senneterre
+</td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+25
+<br>
+à
+<br>
+jeu
+<br>
+29
+</td>
+<td> </td>
+<td class='ext'>
+Pas de messe
+<span class='addendum'>M. le curé absent</span>
+</td>
 </tr>
 </table>
 </article>
