--- a/feuillets.html
+++ b/feuillets.html
@@ -21,7 +21,7 @@
 <table cellpadding='0' cellspacing='5' class='fit' summary='Feuillets paroissiaux'>
 <tbody>
 <tr>
-<td class='fnt-b txt-right red'>12 décembre 2022</td>
+<td class='fnt-b txt-right'>12 décembre 2022</td>
 <td>
 <button onclick='location.href=&#39;20221212.html&#39;'>HTML</button>
 </td>
