--- a/annonces.html
+++ b/annonces.html
@@ -15,14 +15,21 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Annonces</div>
       </header>
-      <section><div class='mg-a w50'>
-<button id='ibutton0' onclick='isection(0)'>Tirage au profit de la Fabrique</button>
-<button id='ibutton2' onclick='isection(2)'>Bancs d'église à vendre</button>
-<button id='ibutton4' onclick='isection(4)'>L’Équipe de la Joie (recrutement)</button>
-<button id='ibutton3' onclick='isection(3)'>Poste vacant au sein du conseil de Fabrique</button>
-<button id='ibutton1' onclick='isection(1)'>Recrutement chorale St-Paul</button>
-</div>
-<div id='section0'>
+      <section><input checked id='is1' name='slider' type='radio'>
+<input id='is2' name='slider' type='radio'>
+<input id='is3' name='slider' type='radio'>
+<input id='is4' name='slider' type='radio'>
+<input id='is5' name='slider' type='radio'>
+<nav class='sub'>
+<label class='is1' for='is1'>Tirage au profit de la Fabrique</label>
+<label class='is2' for='is2'>Recrutement chorale St-Paul</label>
+<label class='is3' for='is3'>Bancs d'église à vendre</label>
+<label class='is4' for='is4'>Poste vacant au sein du conseil de Fabrique</label>
+<label class='is5' for='is5'>L’Équipe de la Joie (recrutement)</label>
+<div class='slider'></div>
+</nav>
+<div class='sections'>
+<div class='content content-1'>
 <article class='mt-2 mg-3'>
 <titre>Tirage au profit de la Fabrique</titre>
 <p class='txt-cent'>
@@ -31,17 +38,13 @@
 <p>Un tableau de l'artiste peintre Jeannot Hamel, de La Sarre, sera tiré pour Noël. Les billets sont en vente au coût de $ 5. Les profits de cette vente iront à la Fabrique Saint-Paul de Senneterre.</p>
 </article>
 </div>
-<div id='section3'>
+<div class='content content-2'>
 <article class='mt-2 mg-3'>
-<titre>Poste vacant au sein du conseil de Fabrique</titre>
-<p>
-Nous avons un besoin
-<b>urgent</b>
-d’un président au conseil de Fabrique.
-</p>
+<titre>Recrutement chorale St-Paul</titre>
+<p>Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).</p>
 </article>
 </div>
-<div id='section2'>
+<div class='content content-3'>
 <article class='mt-2'>
 <titre>Bancs d'église à vendre</titre>
 <p class='txt-cent'>
@@ -65,13 +68,17 @@ Faites vite, produit en demande !
 </p>
 </article>
 </div>
-<div id='section1'>
-<article class='mt-2 mg-3'>
-<titre>Recrutement chorale St-Paul</titre>
-<p>Si vous êtes intéressé(e)s à rejoindre la chorale de l’église St-Paul, vous êtes les bienvenu(e)s ! Nous avons besoin de relève. Alors adressez-vous au secrétariat de la Fabrique (819-737-2045).</p>
+<div class='content content-4'>
+<article class='mt-2 mg-2'>
+<titre>Poste vacant au sein du conseil de Fabrique</titre>
+<p>
+Nous avons un besoin
+<b>urgent</b>
+d’un président au conseil de Fabrique.
+</p>
 </article>
 </div>
-<div id='section4'>
+<div class='content content-5'>
 <article class='mt-2 mg-3'>
 <titre>L’Équipe de la Joie (recrutement)</titre>
 <p>Notre mission est d’apporter de la joie aux personnes de notre entourage, surtout celles qui sont seules ou malades. Nous avons besoin de bénévoles pour remplir ce mandat.</p>
@@ -81,6 +88,7 @@ Faites vite, produit en demande !
 <p>Si vous êtes intéressé(e)s à joindre l’Équipe de la Joie, vous pouvez donner votre nom au secrétariat au 819-737-2045. <strong>Merci !</strong></p>
 
 </article>
+</div>
 </div>
 </section>
       <div class="openButton"><span class="material-icons">double_arrow</span></div>
