--- a/sacrements.html
+++ b/sacrements.html
@@ -15,28 +15,29 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Célébration des sacrements</div>
       </header>
-      <section><table class='mg-a fit'>
-<tr>
-<td>
-<button id='ibutton1' onclick='isection(1)'>Baptême</button>
-<button id='ibutton2' onclick='isection(2)'>Premier Pardon</button>
-<button id='ibutton3' onclick='isection(3)'>Première Eucharistie</button>
-</td>
-<td style='width: 0.3em'></td>
-<td>
-<button id='ibutton4' onclick='isection(4)'>Confirmation</button>
-<button id='ibutton5' onclick='isection(5)'>Mariage</button>
-<button id='ibutton6' onclick='isection(6)'>Onction des malades</button>
-</td>
-</tr>
-</table>
-<div id='section0'>
+      <section><input checked id='is1' name='slider' type='radio'>
+<input id='is2' name='slider' type='radio'>
+<input id='is3' name='slider' type='radio'>
+<input id='is4' name='slider' type='radio'>
+<input id='is5' name='slider' type='radio'>
+<input id='is6' name='slider' type='radio'>
+<nav class='sub'>
+<label class='is1' for='is1'>Baptême</label>
+<label class='is2' for='is2'>Premier Pardon</label>
+<label class='is3' for='is3'>Première Eucharistie</label>
+<label class='is4' for='is4'>Confirmation</label>
+<label class='is5' for='is5'>Mariage</label>
+<label class='is6' for='is6'>Onction des malades</label>
+<div class='slider'></div>
+</nav>
+<div class='sections'>
+<div class='content content-0'>
 <article class='mg-3 mt-2'>
 <p>Les sacrements de l’initiation chrétienne (baptême, confirmation et eucharistie) peuvent être célébrés au cours de la petite enfance, de l’adolescence ou de la vie adulte.</p>
 <p>Vous trouverez, ici, les informations nécessaires en vue de la célébration des sacrements de la foi.</p>
 </article>
 </div>
-<div id='section1'>
+<div class='content content-1'>
 <p class='section'>Baptême</p>
 <p class='sous-section'>1. Baptême des bébés et des petits enfants (avant l’âge scolaire)</p>
 <div class='mg-l-2'>
@@ -103,7 +104,7 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 </div>
 </div>
 </div>
-<div id='section2'>
+<div class='content content-2'>
 <p class='section'>Premier Pardon</p>
 <p class='sous-section'>1. Pour les enfants baptisés et d’âge scolaire</p>
 <div class='mg-l-2'>
@@ -117,7 +118,7 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 <p>Faire connaître son intention d’entreprendre une démarche de préparation au premier Pardon en téléphonant au secrétariat (819-737-2045), sur les heures de bureau.</p>
 </div>
 </div>
-<div id='section3'>
+<div class='content content-3'>
 <p class='section'>Première Eucharistie</p>
 <p class='sous-section'>1. Pour les enfants baptisés et d’âge scolaire</p>
 <div class='mg-l-2'>
@@ -130,7 +131,7 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 <p>Faire connaître son intention d’entreprendre une démarche de préparation à la première Eucharistie en téléphonant au secrétariat (819-737-2045), sur les heures de bureau.</p>
 </div>
 </div>
-<div id='section4'>
+<div class='content content-4'>
 <p class='section'>Confirmation</p>
 <p class='sous-section'>1. Pour les enfants déjà baptisés d’âge scolaire (niveau primaire)</p>
 <div class='mg-l-2'>
@@ -201,14 +202,14 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 <p>Faire connaître son intention d’entreprendre une démarche de préparation à la Confirmation en téléphonant au secrétariat (819-737-2045), sur les heures de bureau.</p>
 </div>
 </div>
-<div id='section5'>
+<div class='content content-5'>
 <p class='section'>Mariage</p>
 <p class='sous-section'>1. Inscription</p>
 <div class='mg-l-2'>
 <p>a) Note importante</p>
 <div class='mg-l-2' style='color: #33f'>
 <p>Avant de faire des réservations pour les noces (salle, traiteur, musique, etc.), les futurs mariés sont priés de communiquer avec le pasteur de leur paroisse de résidence, au moins dix (10) mois avant la date projetée.</p>
-<p>La première démarche se fait d’abord à la paroisse de résidence des futures époux et ce, même si la célébration religieuse du mariage est prévue dans une autre paroisse.</p>
+<p>La première démarche se fait d’abord à la paroisse de résidence des futurs époux et ce, même si la célébration religieuse du mariage est prévue dans une autre paroisse.</p>
 </div>
 <p>b) Documents à prévoir</p>
 <div class='mg-l-2'>
@@ -276,7 +277,7 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 </ul>
 </div>
 </div>
-<div id='section6'>
+<div class='content content-6'>
 <p class='section'>Onction des malades</p>
 <div class='mg-l-2'>
 <p style='color: #33f'>L’apôtre saint Jacques écrit : « Quelqu’un parmi vous est-il malade ? Qu’il appelle les presbytres de l’Église et qu’ils prient sur lui après l’avoir oint d’huile au nom du Seigneur. La prière de la foi sauvera le patient et le Seigneur le relèvera. S’il a commis des péchés, ils lui seront remis » (5, 14-15).</p>
@@ -291,6 +292,7 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 Si une personne malade désire être visitée par un membre de l’<a class='intextb' href='equipejoie.html'>Équipe de la joie</a>, communiquer avec Mme Laurentienne Blais.
 </p>
 </article>
+</div>
 </div>
 </div>
 </section>
