--- a/sacrements.html
+++ b/sacrements.html
@@ -21,13 +21,17 @@
 <input id='is4' name='slider' type='radio'>
 <input id='is5' name='slider' type='radio'>
 <input id='is6' name='slider' type='radio'>
-<nav class='sub'>
+<nav class='sub' style='flex-direction: row; gap: 10px'>
+<div style='width: content-fit'>
 <label class='is1' for='is1'>Baptême</label>
 <label class='is2' for='is2'>Premier Pardon</label>
 <label class='is3' for='is3'>Première Eucharistie</label>
+</div>
+<div style='width: content-fit'>
 <label class='is4' for='is4'>Confirmation</label>
 <label class='is5' for='is5'>Mariage</label>
 <label class='is6' for='is6'>Onction des malades</label>
+</div>
 <div class='slider'></div>
 </nav>
 <div class='sections'>
