--- a/horaire.html
+++ b/horaire.html
@@ -21,24 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Jeu
-<br>
-15
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
-<tr>
-<td>
-Ven
-<br>
-16
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Sam
 <br>
 17
@@ -131,6 +113,15 @@ jeu
 Pas de messe
 <span class='addendum'>M. le curé absent</span>
 </td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+30
+</td>
+<td>14h00</td>
+<td>Messe à La Maisonnée</td>
 </tr>
 </table>
 </article>
