--- a/horaire.html
+++ b/horaire.html
@@ -21,15 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Sam
-<br>
-17
-</td>
-<td>16h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 18
@@ -122,6 +113,29 @@ Ven
 </td>
 <td>14h00</td>
 <td>Messe à La Maisonnée</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+31
+</td>
+<td>
+ 
+<br>
+16h00
+<br>
+20h00
+</td>
+<td>
+<strong>
+Veille du Jour de l’An
+</strong>
+<br>
+Messe à Senneterre
+<br>
+<span class='ext'>Messe à Barraute</span>
+</td>
 </tr>
 </table>
 </article>
