--- a/horaire.html
+++ b/horaire.html
@@ -21,24 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-18
-</td>
-<td>10h30</td>
-<td class='ext'>Messe à Lebel-sur-Quévillon</td>
-</tr>
-<tr>
-<td>
-Lun
-<br>
-19
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Mer
 <br>
 21
@@ -136,6 +118,34 @@ Messe à Senneterre
 <br>
 <span class='ext'>Messe à Barraute</span>
 </td>
+</tr>
+<tr>
+<td>
+Dim
+<br>
+1
+</td>
+<td>
+ 
+<br>
+10h30
+</td>
+<td>
+<strong>
+Jour de l’An
+</strong>
+<br>
+<span class='ext'>Messe à Lebel-sur-Quévillon</span>
+</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+2
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
