--- a/annonces.html
+++ b/annonces.html
@@ -15,8 +15,8 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Annonces</div>
       </header>
-      <section><input checked id='is2' name='slider' type='radio'>
-<input id='is3' name='slider' type='radio'>
+      <section><input id='is2' name='slider' type='radio'>
+<input checked id='is3' name='slider' type='radio'>
 <input id='is5' name='slider' type='radio'>
 <nav class='sub'>
 <label class='is2' for='is2'>Recrutement chorale St-Paul</label>
