--- a/horaire.html
+++ b/horaire.html
@@ -21,29 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Sam
-<br>
-24
-</td>
-<td>
- 
-<br>
-16h00
-<br>
-20h00
-</td>
-<td>
-<strong>
-Veille de Noël
-</strong>
-<br>
-<span class='ext'>Messe à Lebel-sur-Quévillon</span>
-<br>
-Messe à Senneterre
-</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 25
@@ -127,6 +104,33 @@ Mer
 4
 </td>
 <td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+5
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+6
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+7
+</td>
+<td>16h00</td>
 <td>Messe à Senneterre</td>
 </tr>
 </table>
