--- a/horaire.html
+++ b/horaire.html
@@ -133,6 +133,32 @@ Sam
 <td>16h00</td>
 <td>Messe à Senneterre</td>
 </tr>
+<tr>
+<td>
+Dim
+<br>
+8
+</td>
+<td>
+9h30
+<br>
+11h00
+</td>
+<td class='ext'>
+Messe à La Morandière
+<br>
+Messe à Barraute
+</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+9
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
 </table>
 </article>
 <p class='txt-cent' style='font-weight: normal; line-height: 175%'>
