--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 27 décembre 2022
+: le 29 décembre 2022
 </p>
 <p class='txt-cent'>
 <br>
@@ -27,10 +27,12 @@ Webmestre :
 <button class='mg-a fit' onclick='mailto:csbelisle@yahoo.ca'>Christian Bélisle</button>
 </p>
 </div>
-<article class='mg-a fit pad-1' style='margin-top: 1.5em'>
-<figure>
-<img class='smallphotoborder' src='clin-0300.jpg' title='Photo: C. Bélisle (2022)'>
-<figcaption>Photo: C. Bélisle (2022)</figcaption>
+<article class='mg-a fit pad-1 w70' style='margin-top: 1.5em'>
+<p class='fnt-b'>Communiqué du bureau de presse du Saint-Siège ce jeudi 29 décembre en début d'après-midi :</p>
+<p>"Le Pape émérite a pu bien se reposer la nuit dernière, il est absolument lucide et alerte et aujourd'hui, bien que son état reste grave, la situation est pour le moment stable. Le Pape François renouvelle son invitation à prier pour lui et à l'accompagner en ces heures difficiles."</p>
+<figure class='mg-a'>
+<img class='smallphotoborder' src='fb-20221224.jpg' title='Benoît XV!'>
+<figcaption>Pape émérite Benoît XV!</figcaption>
 </figure>
 </article>
 </section>
