--- a/liens.html
+++ b/liens.html
@@ -83,6 +83,9 @@
 <span>Jésuites (France)</span>
 <br>
 <a href='http://w2.vatican.va/content/vatican/fr.html'>Le Vatican</a>
+<br>
+<a href='https://www.vaticannews.va/fr.html'>Vatican News</a>
+<span>(en français)</span>
 </p>
 </div>
 </article>
