--- a/liens.html
+++ b/liens.html
@@ -18,18 +18,28 @@
       <section><article>
 <div class='linklist'>
 <p>
-<a href='http://www.eveques.qc.ca/'>Assemblée des évêques du Québec</a>
+<a href='http://w2.vatican.va/content/vatican/fr.html'>Le Vatican</a>
+<br>
+<a href='https://www.vaticannews.va/fr.html'>Vatican News</a>
+<span>(en français)</span>
+<br>
+<a href='https://www.osservatoreromano.va/fr.html'>Osservatore Romano</a>
+<span>(en français)</span>
+<br>
 <br>
 <a href='http://www.cecc.ca/'>CECC</a>
 <span class='linkdescr'>(Conférence des évêques catholiques du Canada)</span>
 <br>
-<a href='http://www.kofc.org/fr/index.html%20%20'>Chevaliers de Colomb</a>
-<br>
-<a href='http://www.devp.org/'>Développement et Paix</a>
+<a href='http://www.eveques.qc.ca/'>Assemblée des évêques du Québec</a>
 <br>
 <a href='http://www.diocese-amos.org/'>Diocèse d’Amos</a>
 <br>
 <a href='http://diocese-rouyn-noranda.org/'>Diocèse de Rouyn-Noranda</a>
+<br>
+<br>
+<a href='http://www.kofc.org/fr/index.html%20%20'>Chevaliers de Colomb</a>
+<br>
+<a href='http://www.devp.org/'>Développement et Paix</a>
 <br>
 <a href='http://www.ladoc.org/'>Documentation chrétienne</a>
 <span>(Site très bien fait et très riche de contenu)</span>
@@ -62,9 +72,6 @@
 <a href='http://members.tripod.com/~SelonSaParole/'>Selon sa Parole</a>
 <span>(Revue officielle du Renouveau charismatique au Canada)</span>
 <br>
-<a href='http://www.vatican.va/news_services/index_fr_news.htm'>Service de nouvelles du Vatican</a>
-<span>(V.I.S.)</span>
-<br>
 <a href='http://spiritualite2000.com/'>Spiritualité 2000</a>
 <span>(Centre dominicain de spiritualité Online)</span>
 <br>
@@ -81,11 +88,6 @@
 <br>
 <a href='http://www.jesuites.com/'>Société de Jésus</a>
 <span>Jésuites (France)</span>
-<br>
-<a href='http://w2.vatican.va/content/vatican/fr.html'>Le Vatican</a>
-<br>
-<a href='https://www.vaticannews.va/fr.html'>Vatican News</a>
-<span>(en français)</span>
 </p>
 </div>
 </article>
